--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   , "url" : "http://github.com/veged/ometa-js.git"
   }
 , "bugs" :
-  { "web" : "http://github.com/isaacs/npm/issues" }
+  { "web" : "http://github.com/veged/ometa-js/issues" }
 , "directories" : { "doc" : "./doc", "lib" : "./lib" }
-, "bin" : { "npm" : "./bin/ometajs2js" }
+, "bin" : { "ometajs2js" : "./bin/ometajs2js" }
 , "engines" : { "node" : ">=0.2" }
 , "licenses" :
   [ { "type" : "AS IS" } ]
