--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "ometa-js"]
-	path = ometa-js
+	path = js/mylibs/ometa-js
 	url = git://github.com/Page-/ometa-js.git
 [submodule "CodeMirror2"]
 	path = CodeMirror2
 	url = git://github.com/Page-/CodeMirror2.git
+[submodule "js/mylibs/ometa-js"]
+	path = js/mylibs/ometa-js
+	url = git://github.com/Page-/ometa-js.git
