Use node-static for the static file serving. Fix the remoteServerRequest fixing with the added static file serving.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"dependencies": {
 		"sqlite3": "2.x",
 		"requirejs": "0.x",
-		"lazy": "1.x"
+		"lazy": "1.x",
+		"https://github.com/cloudhead/node-static/tarball/master": "x"
 	}
 }
