Initial postgres support, still needs more work.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"sqlite3": "2.x",
 		"requirejs": "0.x",
 		"lazy": "1.x",
-		"node-static": "https://github.com/cloudhead/node-static/tarball/master"
+		"node-static": "https://github.com/cloudhead/node-static/tarball/master",
+		"pg": "0.6.x"
 	}
 }
