Add extra requirements for editor deploy.

--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -2,6 +2,8 @@
 	"name": "RuleMotion-editor",
 	"version": "0.0.1",
 	"dependencies": {
-		"node-static": "https://github.com/cloudhead/node-static/tarball/master"
+		"node-static": "https://github.com/cloudhead/node-static/tarball/master",
+		"requirejs": "1.x",
+		"pg": "0.6.x"
 	}
 }
