--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -2,7 +2,7 @@
 	"name": "RuleMotion-editor",
 	"version": "0.0.1",
 	"dependencies": {
-		"node-static": "https://github.com/cloudhead/node-static/tarball/master",
+		"express": "3.x",
 		"requirejs": "1.x",
 		"pg": "0.6.x"
 	}
