Update package.json files.

--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -2,10 +2,11 @@
 	"name": "RuleMotion",
 	"version": "0.0.1",
 	"dependencies": {
-		"sqlite3": "2.x",
 		"requirejs": "1.x",
-		"lazy": "1.x",
-		"pg": "0.6.x"
-		"express": "3.x"
+		"pg": "0.6.x",
+		"express": "2.x",
+		"passport": "0.1.x",
+		"sqlite3": "2.x",
+		"lazy": "1.x"
 	}
 }
