--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -6,6 +6,7 @@
 		"pg": "0.6.x",
 		"express": "2.x",
 		"passport": "0.1.x",
+		"passport-local": "0.1.x",
 		"sqlite3": "2.x",
 		"lazy": "1.x"
 	}
