Include jsbeautify via an npm module.

--- a/src/common/ometa-compiler/src/package.json
+++ b/src/common/ometa-compiler/src/package.json
@@ -2,6 +2,7 @@
 	"name": "OMetac",
 	"version": "0.0.1",
 	"dependencies": {
-		"nopt": "1.0.x"
+		"nopt": "1.0.x",
+		"js-beautify": "0.2.x"
 	}
 }
