--- a/src/server/server-glue/src/package.json
+++ b/src/server/server-glue/src/package.json
@@ -7,7 +7,7 @@
 		"passport": "0.1.x",
 		"passport-local": "0.1.x",
 		"pg": "0.6.x",
-		"mysql": "0.9.x",
+		"mysql": "2.0.0-alpha3",
 		"bcrypt": "latest"
 	}
 }
