Change build system to join the package.json files of each module into one global one when building and fix some dependencies that were in the wrong places.

--- a/src/server/data-server/package.json
+++ b/src/server/data-server/package.json
@@ -3,12 +3,10 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"requirejs": "1.x",
-		"pg": "0.6.x",
 		"express": "2.x",
 		"passport": "0.1.x",
 		"passport-local": "0.1.x",
 		"sqlite3": "2.x",
-		"lazy": "1.x",
-		"bcrypt": "0.4.x"
+		"lazy": "1.x"
 	}
 }
