--- a/src/server/server-glue/src/package.json
+++ b/src/server/server-glue/src/package.json
@@ -5,9 +5,6 @@
 		"express": "2.x",
 		"requirejs": "1.x",
 		"passport": "0.1.x",
-		"passport-local": "0.1.x",
-		"pg": "0.6.x",
-		"mysql": "2.0.0-alpha3",
-		"bcrypt": "latest"
+		"mysql": "2.0.0-alpha3"
 	}
 }
