Allow specifying users in the config.json

--- a/src/server/src/config-loader/sample-config.json
+++ b/src/server/src/config-loader/sample-config.json
@@ -4,5 +4,12 @@
 		"modelFile": "example.sbvr",
 		"apiRoot": "example",
 		"customServerCode": "example.coffee" // Optional
+	}],
+	"users": [{
+		"username": "guest",
+		"password": ""
+		"permissions": [
+			"resource.all"
+		]
 	}]
 }
