Switch over to lodash fully.

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,7 +6,7 @@
 		"requirejs": "2.x",
 		"passport": "latest",
 		"mysql": "2.x",
-		"underscore": "latest",
+		"lodash": "latest",
 		"pg": "0.12.x",
 
 		"coffee-script": "latest",
