--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "server-glue",
 	"version": "0.0.1",
+	"main": "src/server/build/platform.js",
+	"scripts": {
+		"postinstall": "node node_modules/requirejs/bin/r.js -o src/server/build/server.build.js"
+	},
 	"dependencies": {
 		"express": "3.x",
 		"requirejs": "2.x",
