--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "requirejs": "2.x",
     "passport": "0.1.x",
     "mysql": "2.x",
-    "lodash": "1.1.x",
+    "lodash": "~1.2.1",
     "pg": "0.14.x",
     "ometa-js": "1.0.x",
     "coffee-script": "1.6.x",
