--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
     "requirejs": "~2.1.6",
-    "q": "~0.9.7"
+    "bluebird": "~0.8.3-3"
   },
   "engines": {
     "node": "0.10.x",
