Install backbone via bower.

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "require-cs": "resin-io/require-cs",
     "jquery": "~1.10.2",
-    "jquery-ui": "~1.10.3"
+    "jquery-ui": "~1.10.3",
+    "backbone": "~1.0.0"
   }
 }
