Install bootstrap via bower.

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery-ui": "~1.10.3",
     "backbone": "~1.0.0",
     "requirejs": "~2.1.9",
-    "d3": "~3.3.8"
+    "d3": "~3.3.8",
+    "bootstrap": "2.3.2"
   }
 }
