--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "backbone": "~1.0.0",
     "requirejs": "~2.1.9",
     "d3": "~3.3.8",
+    "ejs": "~0.8.4",
     "bootstrap": "2.3.2"
   }
 }
