--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "d3": "~3.3.8",
     "ejs": "~0.8.4",
     "bootstrap": "2.3.2",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "bluebird": "petkaantonov/bluebird#v0.9.8-0"
   }
 }
