--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "sbvr-parser": "git+ssh://git@bitbucket.org:rulemotion/sbvr-parser.git#v0.0.10"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+    "node": "~0.10.21"
   }
 }
