Make the bluebird dependency for bower match that of package.json - didn't realise you could use ~ in bower whilst pointing directly to a repo.

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,6 @@
     "ejs": "~0.8.4",
     "bootstrap": "2.3.2",
     "coffee-script": "~1.6.3",
-    "bluebird": "petkaantonov/bluebird#v0.9.8-0"
+    "bluebird": "petkaantonov/bluebird#~v0.9.8-0"
   }
 }
