--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,6 @@
     "async": "caolan/async#c99537ae4837f12e918959c8bd1e70e6b1730f6e",
     "require-css": "~0.1.2",
     "requirejs-text": "~2.0.12"
-    "codemirror": "v3.1"
+    "codemirror": "3.24.0"
   }
 }
