--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,8 @@
     "bootstrap": "2.3.2",
     "coffee-script": "~1.7.1",
     "bluebird": "~1.2.4",
-    "async": "caolan/async#c99537ae4837f12e918959c8bd1e70e6b1730f6e"
+    "async": "caolan/async#c99537ae4837f12e918959c8bd1e70e6b1730f6e",
+    "require-css": "~0.1.2",
+    "requirejs-text": "~2.0.12"
   }
 }
