--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   },
   "repository": "git@bitbucket.org:rulemotion/rulemotion-canvas.git",
   "dependencies": {
-    "coffee-script": "~1.7.1",
-    "ometa-js": "~1.3.2",
-    "mysql": "~2.1.0",
-    "pg": "~2.8.2",
     "bcrypt": "~0.7.6",
+    "bluebird": "~2.1.3",
+    "coffee-script": "~1.7.1",
     "express": "~3.4.0",
     "lodash": "~2.4.1",
+    "mysql": "~2.1.0",
+    "ometa-js": "~1.3.2",
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
-    "requirejs": "~2.1.6",
-    "bluebird": "~1.2.4"
+    "pg": "~2.8.2",
+    "requirejs": "~2.1.6"
   },
   "devDependencies": {
     "abstract-sql-compiler": "git+ssh://git@bitbucket.org:rulemotion/abstract-sql-compiler.git#v0.0.18",
