--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
     "pg": "~3.3.0",
-    "requirejs": "~2.1.6",
+    "requirejs": "2.1.6",
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
