--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "async": "caolan/async#c99537ae4837f12e918959c8bd1e70e6b1730f6e",
     "require-css": "~0.1.4",
     "requirejs-text": "~2.0.12",
-    "codemirror": "4.2.0"
+    "codemirror": "4.2.0",
+    "bcryptjs": "~2.1.0"
   }
 }
