Switch to using webpack rather than requirejs for module loading/configuring and grunt for building.

--- a/package.json
+++ b/package.json
@@ -15,18 +15,42 @@
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
     "pg": "~3.3.0",
-    "requirejs": "2.1.6",
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
     "abstract-sql-compiler": "git+ssh://git@bitbucket.org:rulemotion/abstract-sql-compiler.git#v0.3.0",
+    "coffee-loader": "^0.7.2",
+    "css-loader": "^0.9.1",
+    "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^0.3.8",
+    "file-loader": "^0.8.1",
+    "grunt": "^0.4.5",
+    "grunt-check-dependencies": "^0.8.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-git-describe": "^2.3.2",
+    "grunt-rename": "^0.1.4",
+    "grunt-text-replace": "^0.4.0",
+    "grunt-webpack": "^1.0.8",
+    "imports-loader": "^0.6.3",
     "lf-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/lf-to-abstract-sql.git#v0.0.9",
+    "null-loader": "^0.1.0",
     "odata-parser": "git+ssh://git@bitbucket.org:rulemotion/odata-parser.git#v0.1.0",
     "odata-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/odata-to-abstract-sql.git#v0.2.1",
+    "ometa-loader": "0.0.1",
     "pinejs-client-js": "git+ssh://git@bitbucket.org:rulemotion/pinejs-client-js.git#v0.3.1",
+    "raw-loader": "^0.5.1",
     "sbvr-parser": "git+ssh://git@bitbucket.org:rulemotion/sbvr-parser.git#v0.0.15",
     "sbvr-types": "git+ssh://git@bitbucket.org:rulemotion/sbvr-types.git#v0.1.0",
-    "semver": "^3.0.1"
+    "style-loader": "^0.8.3",
+    "umd-require-webpack-plugin": "0.0.1",
+    "url-loader": "^0.5.5",
+    "webpack": "^1.5.3",
+    "webpack-dev-server": "^1.7.0"
   },
   "engines": {
     "node": "~0.10.21"
