--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bluebird-lru-cache": "~0.1.3",
     "coffee-script": "~1.8.0",
     "express": "~3.4.0",
-    "lodash": "~2.4.1",
+    "lodash": "^3.0.0",
     "mysql": "~2.1.0",
     "ometa-js": "~1.3.2",
     "passport": "~0.1.18",
