--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lodash": "^3.0.0",
     "odata-parser": "git+ssh://git@bitbucket.org:rulemotion/odata-parser.git#v0.1.1",
     "odata-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/odata-to-abstract-sql.git#v0.2.2",
-    "mysql": "~2.1.0",
+    "mysql": "^2.1.0",
     "ometa-js": "~1.3.2",
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
