--- a/package.json
+++ b/package.json
@@ -9,17 +9,14 @@
     "bluebird": "^2.6.0",
     "bluebird-lru-cache": "~0.1.3",
     "coffee-script": "~1.9.0",
-    "express": "~3.4.0",
     "lf-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/lf-to-abstract-sql.git#v0.0.10",
     "lodash": "^3.0.0",
     "odata-parser": "git+ssh://git@bitbucket.org:rulemotion/odata-parser.git#v0.1.1",
     "odata-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/odata-to-abstract-sql.git#v0.2.2",
-    "mysql": "^2.1.0",
     "ometa-js": "~1.3.2",
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
     "pinejs-client-js": "git+ssh://git@bitbucket.org:rulemotion/pinejs-client-js.git#v0.3.4",
-    "pg": "^4.0.0",
     "sbvr-parser": "git+ssh://git@bitbucket.org:rulemotion/sbvr-parser.git#v0.0.17",
     "sbvr-types": "git+ssh://git@bitbucket.org:rulemotion/sbvr-types.git#v0.1.1",
     "typed-error": "~0.1.0"
@@ -51,6 +48,11 @@
     "url-loader": "^0.5.5",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
+  },
+  "optionalDependencies": {
+    "express": "~3.4.0",
+    "mysql": "^2.1.0",
+    "pg": "^4.0.0"
   },
   "engines": {
     "node": "~0.10.21"
