--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^2.6.0",
     "bluebird-lru-cache": "~0.1.3",
     "coffee-script": "~1.9.0",
+    "express-session": "^1.10.3",
     "lf-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/lf-to-abstract-sql.git#v0.0.10",
     "lodash": "^3.0.0",
     "odata-parser": "git+ssh://git@bitbucket.org:rulemotion/odata-parser.git#v0.1.1",
@@ -48,11 +49,17 @@
     "webpack-dev-server": "^1.7.0"
   },
   "optionalDependencies": {
-    "express": "~3.4.0",
+    "body-parser": "^1.12.0",
+    "compression": "^1.4.1",
+    "cookie-parser": "^1.3.4",
+    "express": "^4.11.2",
+    "method-override": "^2.3.1",
     "mysql": "^2.1.0",
+    "multer": "^0.1.7",
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
     "pg": "^4.0.0",
+    "serve-static": "^1.9.1"
   },
   "engines": {
     "node": "~0.10.21"
