Switched to using npm private packages rather than private git repo links.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "pinejs",
+  "name": "@resin/pinejs",
   "version": "0.5.3",
   "main": "src/server/src/server-glue/module.coffee",
   "repository": "git@bitbucket.org:rulemotion/pinejs.git",
   "dependencies": {
-    "abstract-sql-compiler": "git+ssh://git@bitbucket.org:rulemotion/abstract-sql-compiler.git#v0.3.2",
+    "@resin/abstract-sql-compiler": "~0.3.4",
     "bluebird": "^2.6.0",
     "bluebird-lru-cache": "~0.1.3",
     "coffee-script": "~1.9.0",
     "express-session": "^1.10.3",
-    "lf-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/lf-to-abstract-sql.git#v0.0.10",
+    "@resin/lf-to-abstract-sql": "~0.0.13",
     "lodash": "^3.0.0",
-    "odata-parser": "git+ssh://git@bitbucket.org:rulemotion/odata-parser.git#v0.1.1",
-    "odata-to-abstract-sql": "git+ssh://git@bitbucket.org:rulemotion/odata-to-abstract-sql.git#v0.2.4",
+    "@resin/odata-parser": "~0.1.2",
+    "@resin/odata-to-abstract-sql": "~0.2.5",
     "ometa-js": "~1.3.2",
     "pinejs-client": "^1.0.0",
-    "sbvr-parser": "git+ssh://git@bitbucket.org:rulemotion/sbvr-parser.git#v0.0.17",
-    "sbvr-types": "git+ssh://git@bitbucket.org:rulemotion/sbvr-types.git#v0.1.2",
+    "@resin/sbvr-parser": "~0.0.18",
+    "@resin/sbvr-types": "~0.1.3",
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
