--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
+    "bower": "^1.6.8",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.15.2",
     "exports-loader": "^0.6.2",
