--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "src/server/src/server-glue/module.coffee",
   "repository": "git@bitbucket.org:rulemotion/pinejs.git",
   "dependencies": {
-    "@resin/abstract-sql-compiler": "~0.4.2",
-    "bluebird": "^2.6.0",
-    "bluebird-lru-cache": "~0.1.3",
+    "@resin/abstract-sql-compiler": "^1.0.0",
+    "bluebird": "^3.0.6",
+    "bluebird-lru-cache": "^1.0.0",
     "coffee-script": "~1.10.0",
     "express-session": "^1.10.3",
     "@resin/lf-to-abstract-sql": "~0.0.14",
@@ -14,9 +14,9 @@
     "@resin/odata-parser": "~0.1.3",
     "@resin/odata-to-abstract-sql": "~0.3.0",
     "ometa-js": "~1.3.2",
-    "pinejs-client": "^1.0.0",
+    "pinejs-client": "^2.0.0",
     "@resin/sbvr-parser": "~0.0.18",
-    "@resin/sbvr-types": "~0.1.4",
+    "@resin/sbvr-types": "^1.0.0",
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
@@ -56,7 +56,7 @@
     "express": "^4.11.2",
     "method-override": "^2.3.1",
     "mysql": "^2.1.0",
-    "multer": "^0.1.7",
+    "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^4.0.0",
