--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lodash": "^4.0.0",
     "@resin/odata-parser": "~0.1.3",
     "@resin/odata-to-abstract-sql": "~0.3.0",
-    "ometa-js": "~1.3.2",
+    "ometa-js": "^1.4.0",
     "pinejs-client": "^2.1.1",
     "@resin/sbvr-parser": "~0.0.18",
     "@resin/sbvr-types": "^1.0.0",
