--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "repository": "git@bitbucket.org:rulemotion/pinejs.git",
   "dependencies": {
     "@resin/abstract-sql-compiler": "^1.0.1",
+    "@resin/abstract-sql-to-odata-schema": "^1.0.0",
+    "@resin/lf-to-abstract-sql": "~0.0.14",
+    "@resin/odata-parser": "~0.1.5",
+    "@resin/odata-to-abstract-sql": "~0.3.0",
+    "@resin/sbvr-parser": "~0.0.18",
+    "@resin/sbvr-types": "^1.0.0",
     "bluebird": "^3.0.6",
     "bluebird-lru-cache": "^1.0.0",
     "coffee-script": "~1.10.0",
     "express-session": "^1.10.3",
-    "@resin/lf-to-abstract-sql": "~0.0.14",
     "lodash": "^4.0.0",
-    "@resin/odata-parser": "~0.1.5",
-    "@resin/odata-to-abstract-sql": "~0.3.0",
     "ometa-js": "^1.4.0",
     "pinejs-client": "^2.3.1",
-    "@resin/sbvr-parser": "~0.0.18",
-    "@resin/sbvr-types": "^1.0.0",
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
