--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.3.0",
   "main": "src/server/src/server-glue/module.coffee",
   "repository": "git@bitbucket.org:rulemotion/pinejs.git",
+  "scripts": {
+    "dev-server": "grunt webpack-dev-server:client-server"
+  },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^1.2.0",
     "@resin/abstract-sql-to-odata-schema": "^1.0.0",
