--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.1",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.0",
     "grunt-check-dependencies": "^0.12.0",
-    "grunt-cli": "^0.1.13",
+    "grunt-cli": "^1.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-htmlmin": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-git-describe": "^2.3.2",
+    "grunt-gitinfo": "^0.1.8",
     "grunt-rename": "^0.1.4",
     "grunt-text-replace": "^0.4.0",
     "grunt-webpack": "^1.0.8",
