--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/server/src/server-glue/module.coffee",
   "repository": "git@bitbucket.org:rulemotion/pinejs.git",
   "scripts": {
-    "dev-server": "grunt webpack-dev-server:client-server"
+    "dev-server": "grunt webpack-dev-server:client-server",
+    "lint": "resin-lint src Gruntfile.coffee"
   },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^1.2.0",
@@ -47,6 +48,7 @@
     "null-loader": "^0.1.0",
     "ometa-loader": "0.0.1",
     "raw-loader": "^0.5.1",
+    "resin-lint": "^1.3.1",
     "style-loader": "^0.13.0",
     "umd-require-webpack-plugin": "0.0.1",
     "url-loader": "^0.5.5",
