--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "typed-error": "~0.1.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.3",
+    "@types/express": "^4.0.35",
+    "@types/lodash": "^4.14.64",
+    "@types/node": "^6.0.73",
     "bower": "^1.6.8",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.26.1",
@@ -46,6 +50,7 @@
     "grunt-gitinfo": "^0.1.8",
     "grunt-rename": "^0.1.4",
     "grunt-text-replace": "^0.4.0",
+    "grunt-ts": "^6.0.0-beta.15",
     "grunt-webpack": "^1.0.8",
     "imports-loader": "^0.7.0",
     "load-grunt-tasks": "^3.5.0",
@@ -55,6 +60,8 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^1.3.1",
     "style-loader": "^0.13.0",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.3.2",
     "umd-require-webpack-plugin": "0.0.1",
     "url-loader": "^0.5.5",
     "webpack": "^1.5.3",
@@ -72,7 +79,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.0.0",
-    "serve-static": "^1.9.1"
+    "serve-static": "^1.9.1",
+    "ts-node": "^3.0.4"
   },
   "engines": {
     "node": ">=0.10.21 <0.13"
