--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^2.3.1",
-    "@resin/abstract-sql-to-odata-schema": "^1.0.0",
-    "@resin/lf-to-abstract-sql": "~0.0.19",
+    "@resin/lf-to-abstract-sql": "^1.0.0",
     "@resin/odata-parser": "~0.2.0",
-    "@resin/odata-to-abstract-sql": "~0.4.0",
-    "@resin/sbvr-parser": "~0.0.25",
+    "@resin/odata-to-abstract-sql": "^1.0.0",
+    "@resin/sbvr-parser": "^0.1.0",
     "@resin/sbvr-types": "^1.0.0",
     "bluebird": "^3.5.0",
     "bluebird-lru-cache": "^1.0.0",
