--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.64",
     "@types/node": "^6.0.73",
+    "@types/passport": "^0.3.3",
+    "@types/passport-local": "^1.0.30",
     "bower": "^1.6.8",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.26.1",
@@ -68,14 +70,14 @@
     "webpack-dev-server": "^1.7.0"
   },
   "optionalDependencies": {
-    "body-parser": "^1.12.0",
     "bcrypt": "~0.8.0",
+    "body-parser": "^1.12.0",
     "compression": "^1.4.1",
     "cookie-parser": "^1.3.4",
     "express": "^4.11.2",
     "method-override": "^2.3.1",
-    "mysql": "^2.1.0",
     "multer": "^1.1.0",
+    "mysql": "^2.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.0.0",
