--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.3",
+    "@types/body-parser": "^1.16.3",
+    "@types/compression": "0.0.33",
+    "@types/cookie-parser": "^1.3.30",
     "@types/express": "^4.0.35",
+    "@types/express-session": "^1.15.0",
     "@types/lodash": "^4.14.64",
+    "@types/method-override": "0.0.29",
+    "@types/multer": "0.0.33",
     "@types/node": "^6.0.73",
     "@types/passport": "^0.3.3",
     "@types/passport-local": "^1.0.30",
