--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-gitinfo": "^0.1.8",
+    "grunt-newer": "^1.3.0",
     "grunt-rename": "^0.1.4",
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.15",
