--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
+    "@types/deep-freeze": "^0.1.1",
     "@types/express": "4.16.0",
     "@types/express-session": "1.15.10",
     "@types/lodash": "4.14.116",
