Added test and build scripts to package.json, making it easier to build pinejs
Change-type: patch

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "repository": "git@bitbucket.org:rulemotion/pinejs.git",
   "scripts": {
     "prepublish": "require-npm4-to-publish",
-    "prepublishOnly": "grunt prepublish",
+    "prepublishOnly": "npm test",
+    "build": "grunt prepublish",
     "webpack-browser": "grunt webpack:browser",
-    "lint": "resin-lint src Gruntfile.coffee"
+    "lint": "resin-lint src Gruntfile.coffee",
+    "test": "npm run lint && npm run build"
   },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^3.0.0",
