Add a .travis.yml to test on travisci
Change-type: patch

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "ts-node": "^3.0.4"
   },
   "engines": {
-    "node": ">=0.10.21 <0.13"
+    "node": ">=4.0.0",
+    "npm": ">=3.0.0"
   }
 }
