--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		"removeComments": true,
 		"rootDir": "src",
 		"sourceMap": true,
-		"strictNullChecks": true
+		"strictNullChecks": true,
+		"target": "es2015"
 	},
 	"include": [
 		"src/**/*.ts",
