--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/passport": "0.3.3",
     "@types/passport-local": "1.0.30",
     "@types/pg": "6.1.43",
+    "@types/request": "^2.0.8",
     "@types/websql": "0.0.27",
     "coffee-loader": "^0.7.2",
     "extract-text-webpack-plugin": "^1.0.1",
