Set up circleci auto-publishing
Change-type: patch

--- a/circle.yml
+++ b/circle.yml
@@ -1,37 +1,89 @@
-defaults: &defaults
-  steps:
-    - run:
-        name: Ensure npm is at least at version 3
-        command: |
-          if [[ "$(npm --version)" = [12].* ]]; then
-            npm install --global npm@3
-          fi
-    - checkout
-    - run:
-        name: Install and test
-        command: |
-          npm install --loglevel warn
-          npm test --loglevel warn
-
 version: 2
+
+buildSteps: &buildSteps
+  - run:
+      name: Ensure npm is at least at version 3
+      command: |
+        if [[ "$(npm --version)" = [12].* ]]; then
+          sudo npm install --global npm@3
+        fi
+  - checkout
+  - run:
+      name: Install
+      command: npm install --loglevel warn
+  - run:
+      name: Test
+      command: npm test --loglevel warn
+  - persist_to_workspace:
+      # Persist all job output, so we can (potentially) use it for deploys
+      root: ../
+      paths:
+        - ./node-*
+
 jobs:
-  node4:
+  node-4:
     docker:
-      - image: library/node:4
-    <<: *defaults
-  node6:
+      - image: circleci/node:4
+    working_directory: ~/node-4
+    steps: *buildSteps
+
+  node-6:
     docker:
-      - image: library/node:6
-    <<: *defaults
-  node8:
+      - image: circleci/node:6
+    working_directory: ~/node-6
+    steps: *buildSteps
+
+  node-8:
     docker:
-      - image: library/node:8
-    <<: *defaults
+      - image: circleci/node:8
+    working_directory: ~/node-8
+    steps: *buildSteps
+
+  deploy:
+    # For this to work NPM_TOKEN must be set for the account used for publishing
+    docker:
+      - image: circleci/node:8
+    steps:
+      - attach_workspace:
+          at: $CIRCLE_WORKING_DIRECTORY
+      - run:
+          name: Login
+          command: |
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+            npm whoami
+      - deploy:
+          name: Deploy
+          command: npm publish
+          # Output used for publish is from node 8 build
+          working_directory: $CIRCLE_WORKING_DIRECTORY/node-8
 
 workflows:
   version: 2
-  build_all:
+  build:
     jobs:
-      - node4
-      - node6
-      - node8
+      - node-4:
+          # Run for all tags (required to allow the deploy to trigger on version tags)
+          filters:
+            tags:
+              only: /.*/
+      - node-6:
+          # Run for all tags (required to allow the deploy to trigger on version tags)
+          filters:
+            tags:
+              only: /.*/
+      - node-8:
+          # Run for all tags (required to allow the deploy to trigger on version tags)
+          filters:
+            tags:
+              only: /.*/
+      - deploy:
+          # Deploy passing builds if they're tagged with a version
+          requires:
+            - node-4
+            - node-6
+            - node-8
+          filters:
+            tags:
+              only: /^v\d+\.\d+\.\d+$/
+            branches:
+              ignore: /.*/
