--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@resin/pinejs",
   "version": "5.2.16",
   "main": "out/server-glue/module",
+  "types": "src/server-glue/module",
   "repository": "git@github.com:resin-io/pinejs.git",
   "license": "Apache-2.0",
   "scripts": {
@@ -16,20 +17,9 @@
     "@resin/abstract-sql-compiler": "^3.0.0",
     "@resin/lf-to-abstract-sql": "^1.0.3",
     "@resin/odata-parser": "~0.2.0",
-    "@resin/odata-to-abstract-sql": "^1.0.0",
+    "@resin/odata-to-abstract-sql": "^1.0.2",
     "@resin/sbvr-parser": "^0.1.0",
     "@resin/sbvr-types": "^1.0.0",
-    "bluebird": "^3.5.0",
-    "bluebird-lru-cache": "^1.0.0",
-    "coffee-script": "~1.12.2",
-    "express-session": "^1.10.3",
-    "lodash": "^4.0.0",
-    "memoizee": "^0.4.1",
-    "ometa-js": "^1.4.2",
-    "pinejs-client": "^4.0.0",
-    "typed-error": "^2.0.0"
-  },
-  "devDependencies": {
     "@types/bluebird": "3.5.16",
     "@types/body-parser": "1.16.3",
     "@types/compression": "0.0.33",
@@ -45,6 +35,17 @@
     "@types/passport-local": "1.0.30",
     "@types/pg": "6.1.43",
     "@types/websql": "0.0.27",
+    "bluebird": "^3.5.0",
+    "bluebird-lru-cache": "^1.0.0",
+    "coffee-script": "~1.12.2",
+    "express-session": "^1.10.3",
+    "lodash": "^4.0.0",
+    "memoizee": "^0.4.1",
+    "ometa-js": "^1.4.2",
+    "pinejs-client": "^4.0.0",
+    "typed-error": "^2.0.0"
+  },
+  "devDependencies": {
     "coffee-loader": "^0.7.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "grunt": "^1.0.0",
@@ -67,7 +68,7 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^1.3.1",
     "ts-loader": "^2.0.3",
-    "typescript": "^2.5.3",
+    "typescript": "^2.6.2",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
